force-app/main/default/objects/Song__c/Song__c.object-meta.xml
<CustomObject>
    <label>Song</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Song Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Songs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>