force-app/main/default/objects/Song__c/fields/Band__c.field-meta.xml
<CustomField>
    <fullName>Band__c</fullName>
    <label>Band</label>
    <referenceTo>Band__c</referenceTo>
    <relationshipLabel>Songs</relationshipLabel>
    <relationshipName>Songs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>