force-app/main/default/objects/Song__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pop</fullName>
            </value>
            <value>
                <fullName>Hip hop</fullName>
            </value>
            <value>
                <fullName>Rock</fullName>
            </value>
            <value>
                <fullName>Blues</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>