force-app/main/default/objects/Song__c/fields/Recorded__c.field-meta.xml
<CustomField>
    <fullName>Recorded__c</fullName>
    <label>Recorded</label>
    <type>Date</type>
</CustomField>